--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Copyright 2014 - The CyanogenMod Project
 
-Device configuration for LGE G3 (T-Mobile).
+Device configuration for LGE G3 (SKT).
 
 WORK IN PROGRESS. WILL EAT YOUR CAT.
